--- a/Controls/ExtendedDatePicker.xaml
+++ b/Controls/ExtendedDatePicker.xaml
@@ -17,7 +17,8 @@
             </Border.GestureRecognizers>
             <Grid ColumnDefinitions="*,Auto">
                 <Label Text="DD/MM/YYYY" x:Name="datelbl" VerticalTextAlignment="Center"/>
-                <DatePicker IsVisible="false" x:Name="datepicker"
+                <DatePicker x:Name="datepicker"
+                            Opacity="0"
                             Date="{Binding Date,Source={x:Reference extendedDatepicker}}"
                             DateSelected="datepicker_DateSelected"/>
                 <Image VerticalOptions="Center" HorizontalOptions="End" >
