--- a/Views/ContentViews/OneWayTripContentView.xaml
+++ b/Views/ContentViews/OneWayTripContentView.xaml
@@ -10,21 +10,22 @@
             Padding="15"
             StrokeShape="RoundRectangle 12">
 
-        <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto" RowSpacing="18">
+        <VerticalStackLayout Spacing="18">
+
             <controls:ExtendedEntry Title="From"
-                        PlaceholderText="Search Departure Airport"
-                        Text="{Binding DepartureText}"/>
+            PlaceholderText="Search Departure Airport"
+            Text="{Binding DepartureText}"/>
 
             <controls:ExtendedEntry Title="To"
-                        PlaceholderText="Search Destination Airport"
-                        Text="{Binding DestinationText}"
-                        Grid.Row="1"/>
+            PlaceholderText="Search Destination Airport"
+            Text="{Binding DestinationText}"
+            Grid.Row="1"/>
 
             <controls:ExtendedDatePicker Title="Travel Date"
-                             Grid.Row="2"/>
+                 Grid.Row="2"/>
 
             <controls:ExtendedDropdown Title="Pax Size"
-                                       Grid.Row="3"/>
+                           Grid.Row="3"/>
 
             <Button Text="Search Flights"
                     BackgroundColor="#FFD93B"
@@ -35,8 +36,7 @@
                     Margin="0,10,0,0"
                     Grid.Row="4"/>
 
-
-        </Grid>
+        </VerticalStackLayout>
 
     </Border>
 
