--- a/Views/ContentViews/RoundTripContentView.xaml
+++ b/Views/ContentViews/RoundTripContentView.xaml
@@ -2,7 +2,8 @@
 <Grid xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
       xmlns:controls="clr-namespace:AirIQ.Controls"
-      x:Class="AirIQ.Views.ContentViews.RoundTripContentView">
+      x:Class="AirIQ.Views.ContentViews.RoundTripContentView"
+      Padding="16">
 
     <Border BackgroundColor="White"
         StrokeThickness="0"
@@ -11,13 +12,15 @@
 
         <Grid RowDefinitions="Auto,Auto,Auto,Auto,Auto" RowSpacing="18">
 
-            <Entry/>
+            <controls:ExtendedEntry Title="From"
+                                    PlaceholderText="Search City or Airport"
+                                    Text="{Binding DepartureText}"/>
 
-            <Entry Grid.Row="1"/>
+            <controls:ExtendedDatePicker Title="Travel Date" Grid.Row="1"/>
 
-            <Entry Grid.Row="2"/>
+            <controls:ExtendedDropdown Title="Pax Size" Grid.Row="2"/>
 
-            <Entry Grid.Row="3"/>
+            <controls:ExtendedDropdown Title="Airline" Grid.Row="3"/>
 
             <Button Text="Search Flights"
                 BackgroundColor="#FFD93B"
