--- a/Views/DashboardPage.xaml
+++ b/Views/DashboardPage.xaml
@@ -1,19 +1,33 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="AirIQ.Views.DashboardPage"
-             xmlns:viewmodel="clr-namespace:AirIQ.ViewModels"
-             x:DataType="viewmodel:DashboardPageViewModel"
-             xmlns:view="clr-namespace:AirIQ.Views.ContentViews"
-             xmlns:controls="clr-namespace:AirIQ.Controls"
-             BackgroundColor="AliceBlue"
-             Shell.NavBarIsVisible="False">
+<ContentPage
+  x:Class="AirIQ.Views.DashboardPage"
+  xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+  xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+  xmlns:controls="clr-namespace:AirIQ.Controls"
+  xmlns:template="clr-namespace:AirIQ.Views.ContentViews"
+  xmlns:view="clr-namespace:AirIQ.Views.ContentViews"
+  xmlns:viewmodel="clr-namespace:AirIQ.ViewModels"
+  x:DataType="viewmodel:DashboardPageViewModel"
+  BackgroundColor="AliceBlue"
+  Shell.NavBarIsVisible="False">
 
-    <Grid RowDefinitions="Auto,Auto" 
-          RowSpacing="0">
-        <view:TopTabView x:Name="FlightTabs" 
-                         SelectedTab="{Binding SelectedTab, Mode=TwoWay}" 
-                         TabChangedCommand="{Binding SelectTabCommand}"/>
-    </Grid>
+  <Grid RowDefinitions="Auto,*">
+
+    <Border Grid.Row="0" BackgroundColor="White">
+      <Label
+        Grid.Row="0"
+        Margin="0,10,0,10"
+        FontSize="22"
+        HorizontalOptions="Center"
+        Text="Book Flights"
+        TextColor="Black"
+        VerticalOptions="Center" />
+    </Border>
+
+
+
+    <template:OneWayTripContentView Grid.Row="1" />
+
+  </Grid>
 
 </ContentPage>
