--- a/Controls/LoadingIndicatorView.xaml
+++ b/Controls/LoadingIndicatorView.xaml
@@ -6,7 +6,7 @@
 
     <Grid ColumnDefinitions="2*,6*,2*">
 
-        <Border StrokeShape="RoundRectangle 12" VerticalOptions="Center" Stroke="{DynamicResource PopupBackground}"  Grid.Column="1">
+        <Border StrokeShape="RoundRectangle 12" VerticalOptions="Center" Stroke="{DynamicResource AshtonSkies}"  Grid.Column="1">
         <Image Source="loader.gif" IsAnimationPlaying="True"/>
         </Border>
     </Grid>
