--- a/Views/DashboardPage.xaml
+++ b/Views/DashboardPage.xaml
@@ -5,29 +5,31 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
   xmlns:controls="clr-namespace:AirIQ.Controls"
   xmlns:template="clr-namespace:AirIQ.Views.ContentViews"
-  xmlns:views="clr-namespace:AirIQ.Views"
   xmlns:viewmodel="clr-namespace:AirIQ.ViewModels"
+  xmlns:views="clr-namespace:AirIQ.Views"
+  x:Name="thisPage"
   x:DataType="viewmodel:DashboardPageViewModel"
-  BackgroundColor="AliceBlue"
-  Shell.NavBarIsVisible="False"
-  x:Name="thisPage">
+  IsNavBarVisible="False">
 
-  <Grid RowDefinitions="Auto,*,Auto">
+  <views:BasePage.PageContent>
 
-    <Border Grid.Row="0"
-            BackgroundColor="White">
-      <Label
-        Grid.Row="0"
-        Margin="0,10,0,10"
-        FontSize="22"
-        HorizontalOptions="Center"
-        Text="Book Flights"
-        TextColor="Black"
-        VerticalOptions="Center"/>
-    </Border>
+    <Grid RowDefinitions="Auto,*,Auto">
 
-    <template:OneWayTripContentView Grid.Row="1" BindingContext="{Binding Source={x:Reference thisPage}, Path=BindingContext}"/>
+      <Border Grid.Row="0" BackgroundColor="White">
+        <Label
+          Grid.Row="0"
+          Margin="0,10,0,10"
+          FontSize="22"
+          HorizontalOptions="Center"
+          Text="Book Flights"
+          TextColor="Black"
+          VerticalOptions="Center" />
+      </Border>
 
-  </Grid>
+      <template:OneWayTripContentView Grid.Row="1"
+        BackgroundColor="AliceBlue"
+         BindingContext="{Binding Source={x:Reference thisPage}, Path=BindingContext}" />
 
+    </Grid>
+  </views:BasePage.PageContent>
 </views:BasePage>
